# ChangeLog for net-firewall/iptables
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/iptables/ChangeLog,v 1.8 2003/04/19 12:45:59 aliz Exp $

  19 Apr 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Removed 03_all_mac_fix.patch.bz2 becuse it was fixed in 1.2.8.

*iptables-1.2.8 (19 Apr 2003)

  19 Apr 2003; Daniel Ahlberg <aliz@gentoo.org> iptables-1.2.8.ebuild :
  Version bump.

*iptables-1.2.7a-r4 (10 Apr 2003)

  19 apr 2003; Preston A. Elder <prez@gentoo.org> iptables-1.2.7a-r4.ebuild :
  Enabled -r4 for x86

  10 apr 2003; Preston A. Elder <prez@gentoo.org> iptables-1.2.7a-r4.ebuild :
  Added compilation of development tools

*iptables-1.2.7a-r3 (11 Mar 2003)

  15 Mar 2003; Jason Wever <weeve@gentoo.org>
  files/sparc64_limit_fix.patch.bz2:
  Added sparc64_limit_fix.patch.bz2 back into the files directory as it got lost
  in the moving of iptables from sys-apps to net-firewall.

  15 Mar 2003; Jan Seidel <tuxus@gentoo.org> :
  Added mips to KEYWORDS

  11 Mar 2003; Martin Holzer <mholzer@gentoo.org> iptables-1.2.7a-r3.ebuild,
  files/grsecurity-1.2.7a-iptables.patch, files/iptables-1.2.6a-imq.diff-3,
  files/iptables-1.2.7a-gentoo.diff, files/iptables-1.2.7a-hppa.diff,
  files/iptables-1.2.7a-imq.diff-3, files/iptables.confd, files/iptables.init,
  files/1.2.7a-files/01_all_grsecurity.patch.bz2,
  files/1.2.7a-files/02_all_imq.patch.bz2,
  files/1.2.7a-files/03_all_mac_fix.patch.bz2,
  files/1.2.7a-files/04_all_no_optimize_fix.patch.bz2:
  moved from sys-apps/iptables to net-firewall/iptables

  21 Feb 2003; Zach Welch <zwelch@gentoo.org> iptables-1.2.7a-r3.ebuild :
  Added arm keyword 

  17 Feb 2003; Guy Martin <gmsoft@gentoo.org> iptables-1.2.7a-r3.ebuild :
  Added patch and keyword for hppa.

*iptables-1.2.7a-r3 (09 Jan 2003)

  11 Mar 2003; Zach Welch <zwelch@gentoo.org> iptables-1.2.7a-r3.ebuild:
  change sys-kernel/linux-headers to new virtual/os-headers
